Add external stock